unpackaged/main/default/objects/Contact/fields/Active_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Active_Cancer__c</fullName>
    <inlineHelpText>Do you have active cancer?</inlineHelpText>
    <label>Active Cancer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>