unpackaged/main/default/objects/Contact/fields/ADAM_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>ADAM_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADAM Questionnaire</label>
    <lookupFilter>
        <active>true</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ADAM_Questionnaire__c</referenceTo>
    <relationshipLabel>ADAM Questionnaires</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>