unpackaged/main/default/objects/Contact/fields/Alcohol_units_week__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_units_week__c</fullName>
    <label>Alcohol (units/week)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>