unpackaged/main/default/objects/Contact/fields/Already_seen_doctor__c.field-meta.xml
<CustomField>
    <fullName>Already_seen_doctor__c</fullName>
    <description>Have you already seen a doctor about your hormone issues?</description>
    <inlineHelpText>Have you already seen a doctor about your hormone issues?</inlineHelpText>
    <label>Already seen doctor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes I have seen my GP</fullName>
            </value>
            <value>
                <fullName>Yes I have seen an endocrinologist</fullName>
            </value>
            <value>
                <fullName>Yes I have seen another doctor</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>