unpackaged/main/default/objects/Contact/fields/Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications__c</fullName>
    <label>Medications at sign-up</label>
    <type>TextArea</type>
</CustomField>