unpackaged/main/default/objects/Contact/fields/CVA__c.field-meta.xml
<CustomField>
    <fullName>CVA__c</fullName>
    <label>CVA / Stroke</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>True</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>