unpackaged/main/default/objects/Contact/fields/Date_of_last_Blood_Test_order__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_Blood_Test_order__c</fullName>
    <label>Date of last Blood Test order</label>
    <summarizedField>Blood_Test__c.Order_Date__c</summarizedField>
    <summaryForeignKey>Blood_Test__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>