unpackaged/main/default/objects/Contact/fields/Date_of_last_Successful_Blood_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_Successful_Blood_Test__c</fullName>
    <label>Date of last Successful Blood Test</label>
    <summarizedField>Blood_Test__c.Sample_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Blood_Test__c.Status__c</field>
        <operation>equals</operation>
        <value>Successful Test, Successful Test, Partial Success/Some Failed Values</value>
    </summaryFilterItems>
    <summaryForeignKey>Blood_Test__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>