unpackaged/main/default/objects/Contact/fields/Diet__c.field-meta.xml
<CustomField>
    <fullName>Diet__c</fullName>
    <label>Diet</label>
    <type>TextArea</type>
</CustomField>