unpackaged/main/default/objects/Contact/fields/Drug_History__c.field-meta.xml
<CustomField>
    <fullName>Drug_History__c</fullName>
    <label>Drug History</label>
    <type>TextArea</type>
</CustomField>