unpackaged/main/default/objects/Contact/fields/Exercise__c.field-meta.xml
<CustomField>
    <fullName>Exercise__c</fullName>
    <label>Exercise</label>
    <type>TextArea</type>
</CustomField>