unpackaged/main/default/objects/Contact/fields/Family_History_of_Heart_Disease_Stroke__c.field-meta.xml
<CustomField>
    <fullName>Family_History_of_Heart_Disease_Stroke__c</fullName>
    <label>Family History of Heart Disease/Stroke</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>True</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>