unpackaged/main/default/objects/Contact/fields/Fertility_History__c.field-meta.xml
<CustomField>
    <fullName>Fertility_History__c</fullName>
    <label>Fertility History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I am intending to try for children in the future</fullName>
            </value>
            <value>
                <fullName>I do not want children ever and I am 100% certain of this</fullName>
            </value>
            <value>
                <fullName>I have never really considered my fertility</fullName>
            </value>
            <value>
                <fullName>I have children and my family is complete</fullName>
            </value>
            <value>
                <fullName>I have children and I want to father more children in the future</fullName>
            </value>
            <value>
                <fullName>I am actively trying for children now my partner is under 35 years old</fullName>
            </value>
            <value>
                <fullName>I am actively trying for children and my partner is over 35 years old</fullName>
            </value>
            <value>
                <fullName>I or my partner are currently under fertility investigation either privately or with the NHS</fullName>
            </value>
            <value>
                <fullName>My partner is currently pregnant</fullName>
            </value>
            <value>
                <fullName>I&#39;ve had a vasectomy</fullName>
            </value>
            <value>
                <fullName>I am gay but want to father children using my own semen for conception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>