unpackaged/main/default/objects/Contact/fields/Further_Tests_Investigations_done_by_GP__c.field-meta.xml
<CustomField>
    <fullName>Further_Tests_Investigations_done_by_GP__c</fullName>
    <label>Further Tests/Investigations done by GP</label>
    <type>TextArea</type>
</CustomField>