unpackaged/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>The Patient&#39;s Gender - Male/Female. Defaults to Male.</description>
    <inlineHelpText>The Patient&#39;s Gender - Male/Female</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
                <default>true</default>
                <label>Male</label>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>