unpackaged/main/default/objects/Contact/fields/GP_Address__c.field-meta.xml
<CustomField>
    <fullName>GP_Address__c</fullName>
    <label>GP Address</label>
    <type>TextArea</type>
</CustomField>