unpackaged/main/default/objects/Contact/fields/GP_First_Name__c.field-meta.xml
<CustomField>
    <fullName>GP_First_Name__c</fullName>
    <label>GP First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>