unpackaged/main/default/objects/Contact/fields/GP_Surname__c.field-meta.xml
<CustomField>
    <fullName>GP_Surname__c</fullName>
    <label>GP Surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>