unpackaged/main/default/objects/Contact/fields/Height_Feet__c.field-meta.xml
<CustomField>
    <fullName>Height_Feet__c</fullName>
    <description>Height in Feet</description>
    <inlineHelpText>Height in Feet</inlineHelpText>
    <label>Height (Feet)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>