unpackaged/main/default/objects/Contact/fields/History_medical_issues__c.field-meta.xml
<CustomField>
    <fullName>History_medical_issues__c</fullName>
    <inlineHelpText>Do you have a history of cancer?</inlineHelpText>
    <label>History of Medical Issues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>