unpackaged/main/default/objects/Contact/fields/ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>ID_Checked__c</fullName>
    <description>Has the Patient&#39;s ID been checked?</description>
    <inlineHelpText>Has the Patient&#39;s ID been checked?</inlineHelpText>
    <label>ID Checked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>