unpackaged/main/default/objects/Contact/fields/Kleinfelters_Kallmans_Syndrome__c.field-meta.xml
<CustomField>
    <fullName>Kleinfelters_Kallmans_Syndrome__c</fullName>
    <label>Kleinfelters/Kallmans Syndrome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>True</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>