unpackaged/main/default/objects/Contact/fields/Operations_Accidents__c.field-meta.xml
<CustomField>
    <fullName>Operations_Accidents__c</fullName>
    <label>Operations/Accidents</label>
    <type>TextArea</type>
</CustomField>