unpackaged/main/default/objects/Contact/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <displayFormat>PID-{000000}</displayFormat>
    <label>Patient ID</label>
    <type>AutoNumber</type>
</CustomField>