unpackaged/main/default/objects/Contact/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <label>Patient Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <color>#9999FF</color>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Blood Test</fullName>
                <color>#66FFFF</color>
                <label>Blood Test</label>
            </value>
            <value>
                <fullName>Ready for Consultation</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
                <color>#33CCFF</color>
                <label>Consultation</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#66FF99</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Current Patient</fullName>
                <color>#33FF33</color>
                <label>Current Patient</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <color>#FF9900</color>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <color>#FF6666</color>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Unsuitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>