unpackaged/main/default/objects/Contact/fields/Populate_Bloods_Dates__c.field-meta.xml
<CustomField>
    <fullName>Populate_Bloods_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Populate Bloods Dates</label>
    <type>Checkbox</type>
</CustomField>