unpackaged/main/default/objects/Contact/fields/Sleep_Apnoea__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Apnoea__c</fullName>
    <label>Sleep Apnoea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Central</fullName>
            </value>
            <value>
                <fullName>Yes - Obstructive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>