unpackaged/main/default/objects/Contact/fields/Smoker__c.field-meta.xml
<CustomField>
    <fullName>Smoker__c</fullName>
    <label>Smoker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Vape</fullName>
            </value>
            <value>
                <fullName>Quit smoking</fullName>
            </value>
            <value>
                <fullName>Never smoked</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>