unpackaged/main/default/objects/Contact/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <description>Weight in Kg</description>
    <inlineHelpText>Weight in Kg</inlineHelpText>
    <label>Weight (kg)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>