unpackaged/main/default/objects/Contact/fields/X2nd_Email__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Email__c</fullName>
    <description>2nd Email Address</description>
    <inlineHelpText>2nd Email Address</inlineHelpText>
    <label>2nd Email</label>
    <type>Email</type>
</CustomField>