unpackaged/main/default/objects/Contact/listViews/Current_Patients.listView-meta.xml
<ListView>
    <fullName>Current_Patients</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Patient_Status__c</field>
        <operation>equals</operation>
        <value>Current Patient</value>
    </filters>
    <label>Current Patients</label>
</ListView>